// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.data";
option java_outer_classname = "DataServicesProto";
option objc_class_prefix = "HLW";

package dataservices;

service DataServices {
  rpc Put (PutRequest) returns (PutResponse) {}
  rpc Get (GetRequest) returns (GetResponse) {}
  rpc Delete (DeleteRequest) returns (DeleteResponse) {}

  rpc MigrateFrom (MigrateRequest) returns (MigrateResponse) {}
  rpc MigrateTo (MigrateRequest) returns (MigrateResponse) {}
  rpc TransferDataFrom (TransferDataFromRequest) returns (TransferDataFromResponse) {}
  rpc TransferDataTo (TransferDataToRequest) returns (TransferDataToResponse) {}

  rpc Sync (SyncRequest) returns (SyncResponse) {}
  rpc TryPut (TryPutRequest) returns (PutResponse) {}
  rpc TryDelete (TryDeleteRequest) returns (DeleteResponse) {}
  rpc Commit (SyncSeq) returns (SyncSeq) {}
  rpc RollBack (SyncSeq) returns (SyncSeq) {}
  rpc CheckLog (SyncSeq) returns (SyncSeq) {}
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {
  int32 status = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  int32 status = 1;
  string value = 2;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  int32 status = 1;
}

message MigrateSlice {
  string address = 1;
  repeated int32 slot_id = 2;
}

message MigrateRequest {
  repeated MigrateSlice migrate_slices = 1;
}

message MigrateResponse {
  int32 status = 1;
}

message Entry {
  string key = 1;
  string value = 2;
}

message TransferDataFromRequest {
  repeated int32 slot_id = 1;
}

message TransferDataFromResponse {
  repeated Entry entries = 1;
}

message TransferDataToRequest {
  repeated Entry entries = 1;
}

message TransferDataToResponse {
  int32 status = 1;
}

message Slot {
  int32 slot_id = 1;
  repeated Entry entries =2;
}

message TryPutRequest {
  string key = 1;
  string value = 2;
  int32 sync_seq = 3;
}

message TryDeleteRequest {
  string key = 1;
  string value = 2;
  int32 sync_seq = 3;
}

message SyncRequest {
  int32 status = 1;
}

message SyncResponse {
  repeated Slot slots = 1;
}

message SyncSeq {
  int32 sync_seq = 1;
}