// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.locator";
option java_outer_classname = "LocatorServicesProto";
option objc_class_prefix = "HLW";

package locatorservices;

service LocatorServices {
  rpc Locate (LocateRequest) returns (LocateResponse) {}
}

message LocateRequest {
  string key = 1;
}

message LocateResponse {
  int32 status = 1;
  string address = 2;
}
